--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed et nesciunt magni quisquam commodi fugiat minima neque tempora, sit consectetur incidunt nulla accusantium aperiam illo cumque quod veniam asperiores! Quaerat!</p>
 </body>
 </html>
